Bug 115601 - ImageMap UI: File type list item <Alle> is not translatable
Summary: ImageMap UI: File type list item <Alle> is not translatable
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium trivial
Assignee: Julien Nabet
URL:
Whiteboard: target:6.1.0 target:6.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-09 23:27 UTC by ace_dent
Modified: 2018-02-12 18:51 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ace_dent 2018-02-09 23:27:33 UTC
Description:
Tested with:
Version: 5.4.1.2
Build ID: ea7cb86e6eeb2bf3a5af73a8f7777ac570321527
CPU threads: 4; OS: Mac OS X 10.12.6; UI render: default; 
Locale: en-GB (en_GB.UTF-8); Calc: group

Original report: https://bz.apache.org/ooo/show_bug.cgi?id=51791

ImageMap Load Map dialog shows hard-coded german language <Alle> for filetype selection box.

Steps to Reproduce:
How to reproduce:
1. Open Writer
2. Insert->Picture->From File...
Select one bitmap file
3. Edit-> ImageMap
4. Click 'FileOpen' icon in toolbar

Actual Results:  
Then <Alle> is displayed in 'File type' list.

Expected Results:
This should be something like 'All Files (*)' or 'All', etc. And this string can not be found in WebLingTool.


Reproducible: Always


User Profile Reset: No



Additional Info:
The string is hardcoded in German.


User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_6) AppleWebKit/604.5.6 (KHTML, like Gecko) Version/11.0.3 Safari/604.5.6
Comment 1 Julien Nabet 2018-02-10 18:26:39 UTC
On pc Debian x86-64 with master sources updated today, I can reproduce this.

Here's code pointer:
https://opengrok.libreoffice.org/xref/core/svx/source/dialog/imapdlg.cxx#59
Comment 2 Julien Nabet 2018-02-10 19:38:43 UTC
I submitted this patch to review:
https://gerrit.libreoffice.org/#/c/49547/

Since I don't know well localization, it may be wrong.
Wait and see...
Comment 3 Commit Notification 2018-02-12 09:21:40 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6bcd433fe13ab402d2cc8433d98a78db140858e9

tdf#115601: make ImageMap dialog translatable

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Julien Nabet 2018-02-12 13:13:42 UTC
Waiting for review for 6.0 branch: https://gerrit.libreoffice.org/#/c/49582/
Comment 5 Commit Notification 2018-02-12 18:51:49 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=714ceda6db9dbe8e2b4911872dfba146e9faa68f&h=libreoffice-6-0

tdf#115601: make ImageMap dialog translatable

It will be available in 6.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.