tdf#115601: make ImageMap dialog translatable

Change-Id: Ie1ecb5cd3356144c28de366dbe5e13a3997604e2